remanent pkpir po nowemu

--- a/npkpir_23/web/ksiegowa/sub/podatnikust.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust.xhtml
@@ -18,6 +18,7 @@
        <ui:include src="podatnikust/wyborvat.xhtml"/>
        <ui:include src="podatnikust/wyborvatUE.xhtml"/>
        <ui:include src="podatnikust/inwentaryzacja.xhtml"/>
+       <ui:include src="podatnikust/inwentaryzacja_old.xhtml"/>
        <ui:include src="podatnikust/kwotaautoryzujaca.xhtml"/>
        <ui:include src="podatnikust/pole47.xhtml"/>
        <ui:include src="podatnikust/numeracja.xhtml"/>
