--- a/npkpir_23/web/manager/sub/tablica.xhtml
+++ b/npkpir_23/web/manager/sub/tablica.xhtml
@@ -334,7 +334,8 @@
 <!--        <p:commandButton value="zamien opodatkowanie" actionListener="#{podatnikView.zamienOpodatkowanieDochodowym()}"/>-->
 <!--        <p:commandButton value="naprawfaktury" actionListener="#{fakturaView.zrobfakt()}"/>-->
 <!--     <p:commandButton value="okresowe podid" actionListener="#{fakturaView.okresowepodid()}"/>-->-->
-    <p:commandButton value="zus pobierz" actionListener="#{draPlatnikTimer.autozus  ()}"/>-->
+<!--    <p:commandButton value="zus pobierz" actionListener="#{draPlatnikTimer.autozus  ()}"/>-->-->
+    <p:commandButton value="remanent" actionListener="#{remanentView.tworzremanent()}"/>-->
 <!--    <h:form>
     <p:commandButton value="Export as PDF" ajax="false" >
 <p:dataExporter type="pdf" target="klienci" fileName="adresy"/>
