--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -22,13 +22,12 @@
                         </p:panelGrid>
                         <p:panel header="rozliczenie remanentów: " style="width: 250px;" rendered="#{WpisView.miesiacWpisu eq '12'}"/>
                         <p:panelGrid  columns="2" rendered="#{WpisView.miesiacWpisu eq '12'}">
-                            <h:outputText value="remanent poczatkowy"/>
-                            <bcf:outputpl value="#{remanentView.remanentPoczRoku}"/>
-                            <h:outputText value="remanent końcowy"/><bcf:outputpl value="#{remanentView.remanentKoniecRoku}"/>
-                            <h:outputText value="wartości identyczne" rendered="#{remanentView.roznica eq 0.0}"/>
-                            <h:outputText value="różnica zmniejszająca koszty" rendered="#{remanentView.roznica gt 0.0}"/>
-                            <h:outputText value="różnica zwiększająca koszty" rendered="#{remanentView.roznica lt 0.0}"/>
-                            <bcf:outputpl value="#{remanentView.roznica}"/>
+                            <h:outputText value="remanent poczatkowy"/><bcf:outputpl value="#{zestawienieView.remanentPoczRoku}"/>
+                            <h:outputText value="remanent końcowy"/><bcf:outputpl value="#{zestawienieView.remanentKoniecRoku}"/>
+                            <h:outputText value="wartości identyczne" rendered="#{zestawienieView.remanentroznica eq 0.0}"/>
+                            <h:outputText value="różnica  zmniejszająca koszty" style="color: green;" rendered="#{zestawienieView.remanentroznica gt 0.0}"/>
+                            <h:outputText value="różnica zwiększająca koszty" style="color: red;" rendered="#{zestawienieView.remanentroznica lt 0.0}"/>
+                            <bcf:outputpl value="#{zestawienieView.remanentroznica}"/>
                         </p:panelGrid>
                         <p:panel header="wybierz osobę: " style="width: 250px;" rendered="#{zestawienieView.listawybranychudzialowcow.size() gt 1}"/>
                         <p:selectOneMenu value="#{zestawienieView.wybranyudzialowiec}" style="width: 250px;"  rendered="#{zestawienieView.listawybranychudzialowcow.size() gt 1}" converter="#{podatnikUdzialyConv}">
@@ -81,9 +80,13 @@
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.koszty}" stylePlus="color: red; font-weight: 700;"/>
                             <h:outputText value="wynik firmy narast."/>
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.wynikNarastajaco}" stylePlus="#{zestawienieView.biezacyPit.wynikNarastajaco gt 0 ? 'font-weight: 700; float: right; text-align: right; color: blue;' : 'font-weight: 700; float: right; text-align: right; color: red;'}"/>
-                            <h:outputText value="rozliczenie remanentów - zmniejszenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.biezacyPit.remanent gt 0.0}"/>
-                            <h:outputText value="rozliczenie remanentów - zwiększenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.biezacyPit.remanent lt 0.0}"/>
-                            <bcf:outputpl value="#{zestawienieView.biezacyPit.remanent}" stylePlus="color: green; font-weight: 700;" rendered="#{ zestawienieView.biezacyPit.remanent ne 0.0}"/>
+                            <h:outputText value="remanent początkowy" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentPoczRoku gt 0.0}"/>
+                            <bcf:outputpl value="#{zestawienieView.remanentPoczRoku}" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentPoczRoku ne 0.0}"/>
+                            <h:outputText value="remanent końcowy" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentKoniecRoku gt 0.0}"/>
+                            <bcf:outputpl value="#{zestawienieView.remanentKoniecRoku}" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentKoniecRoku ne 0.0}"/>
+                            <h:outputText value="rozliczenie remanentów - zmniejszenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentroznica gt 0.0}"/>
+                            <h:outputText value="rozliczenie remanentów - zwiększenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.remanentroznica lt 0.0}"/>
+                            <bcf:outputpl value="#{zestawienieView.remanentroznica}" stylePlus="color: green; font-weight: 700;" rendered="#{ zestawienieView.remanentroznica ne 0.0}"/>
                             <h:outputText value="udział %" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.udzial}" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
                             <h:outputText value="przychody udział" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
@@ -142,7 +145,7 @@
                             <p:commandButton value="przelicz"  actionListener="#{zestawienieView.obliczPit()}" update="formpit"  style="width: 120px" styleClass="klik"/>
                             <p:commandButton value="oblicz pit roczny"  action="#{zestawienieView.obliczPitRoczny()}" update="formpit" type="submit" style="width: 120px" styleClass="klik"/>
                             <p:splitButton value="zachowaj pit"  action="#{zestawienieView.zachowajPit()}" update="akordeon:formpit akordeon:formpi:tablicapita" type="submit">
-                                <p:menuitem global="false" value="dodatkowy-13" actionListener="#{zestawienieView.zachowajPit13()}" icon="ui-icon-arrowrefresh-1-w"/>  
+                                <p:menuitem global="false" value="dodatkowy-13" actionListener="#{zestawienieView.zachowajPit13()}" icon="ui-icon-arrowrefresh-1-w" update="akordeon:formpit akordeon:formpi:tablicapita" />  
                             </p:splitButton>
                             <p:commandButton value="wyślij do podatnika"  action="#{zestawienieView.wyslijPit()}" type="submit" style="width: 120px"/>
                         </p:panelGrid>
