--- a/npkpir_23/web/ksiegowa/sub/podatnikust/inwentaryzacja_old.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/inwentaryzacja_old.xhtml
@@ -7,7 +7,7 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     
     xmlns:bcf="http://brzaskun.com/facelets">
-    <p:tab title="Wartości inwentaryzacji na koniec roku podatkowego">  
+    <p:tab title="STARY remanent">  
         <h:form id="form4old" >
             <h:outputText value="Wartości inwentaryzacji na koniec roku podatkowego" style="font-size: 15px"/>
             <p:growl life="3600"  showDetail="true"/>
