--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -609,6 +609,8 @@
                         <h:outputText value="koszty narast."/>
                         <h:outputText value="#{pitView.biezacyPit.koszty}" style="padding-left: 20%; font-weight: 700; float: right;">
                             <f:convertNumber locale="PL"/></h:outputText>
+                        <h:outputText value="wynik firmy narast."/>
+                        <bcf:outputpl value="#{pitView.biezacyPit.wynikNarastajaco}" stylePlus="#{pitView.biezacyPit.wynikNarastajaco gt 0 ? 'font-weight: 700; float: right; text-align: right; color: blue;' : 'font-weight: 700; float: right; text-align: right; color: red;'}"/>
                         <h:outputText value="rozliczenie remanentów" rendered="#{pitView.biezacyPit.pkpirM eq '12'}"/>
                         <h:outputText value="#{pitView.biezacyPit.remanent}" style="font-weight: 700; float: right; color: green;" rendered="#{pitView.biezacyPit.pkpirM eq '12'}">
                             <f:convertNumber minFractionDigits="2" locale="PL"/>
