--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     >
     <p:dialog id="dialogwaluty" header="Zestawienie używanych w programie walut" widgetVar="waluty"  
-              resizable="false"  onShow="ustawdialog('dialogwaluty','menukartoteki',700,650);" closeOnEscape="true" onHide="resetujdialog('dialogwaluty');" >
+              resizable="false"  onShow="ustawdialog('dialogwaluty','menukartoteki',750,750);" closeOnEscape="true" onHide="resetujdialog('dialogwaluty');" >
         <p:ajax event="open" listener="#{walutyViewFK.init()}" global="false" update="wprowadzonewaluty"/>
         <h:form id="wprowadzonewaluty">
             <p:growl life="3600"  ><p:autoUpdate/></p:growl>
@@ -69,9 +69,7 @@
             </p:dataTable>
         </h:form>
         <h:form id="wpiswalut">
-            <p:panelGrid   columns="1" id="dataTablewpisywaniewalut" style="margin-top: 10px;margin-bottom: 5px; display: none; width: 150px;">
-                <f:facet name="header">
-                    <p:row>
+            <p:panelGrid   columns="4" id="dataTablewpisywaniewalut" style="margin-top: 10px;margin-bottom: 5px; display: none; width: 150px;margin-top: 10px;">
                         <p:column width="40">
                             <h:outputText value="skrót waluty" style="width: 40px;"/>
                         </p:column>
@@ -84,9 +82,6 @@
                         <p:column>
                             <h:outputText value="przelicznik"/>
                         </p:column>
-                    </p:row>
-                </f:facet>
-                <p:row>
                     <p:column >
                         <p:inputText value="#{walutyViewFK.nowawaluta.symbolwaluty}" required="true" requiredMessage="Wpisz skrót waluty" maxlength="3"   style="text-align: center;"/>
                     </p:column>
@@ -100,7 +95,6 @@
                     <p:column>
                         <p:inputText value="#{walutyViewFK.nowawaluta.przelicznik}" required="true"/>
                     </p:column>
-                </p:row>
             </p:panelGrid>
             <div style="padding: 10px;">
                 <p:commandButton id="walutynowabutton" value="nowa" onclick="walutypokaz();" style="width: 120px;"/>
