remanent pkpir po nowemu

--- a/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
@@ -9,7 +9,7 @@
       
         <h:form id="formarchiwum">
             
-             <p:panelGrid id="panelsum1" rendered="#{WpisView.biuroiszef eq true}">
+            <p:panelGrid id="panelsum1" columns="4" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                     <p:column>
