--- a/npkpir_23/web/wspolny/sub/faktura/faktura_walutakonto.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_walutakonto.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets">
     <p:tab id="fakturawalutakonto" title="Wykaz kont bankowych">
         <h:form id="form_fakturawalutakonto">
-            <p:panelGrid>
+            <p:panelGrid columns="6">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
