--- a/npkpir_23/web/ksiegowa/sub/dialog_cechy_zapisu.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dialog_cechy_zapisu.xhtml
@@ -54,7 +54,7 @@
             </p:dataTable>
             </h:form>
         <h:form id="formCHpkpir1">
-            <p:panelGrid id="nowacecha"  columns="1">
+            <p:panelGrid id="nowacecha" >
                 <f:facet name="header">
                     <p:row>
                         <p:column>
