--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis_platnosci.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis_platnosci.xhtml
@@ -130,7 +130,7 @@
                 </p:dataTable>
             </h:form>
             <h:form  id="form_dokument_wpis_platnosci1">
-                <p:panelGrid  columns="5"  style="margin-top: 10px;" id="wprowadzanieplatnosci">
+                <p:panelGrid style="margin-top: 10px;" id="wprowadzanieplatnosci">
                     <f:facet name="header">
                         <p:row>
                             <p:column>
