--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cechy_zapisu.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cechy_zapisu.xhtml
@@ -54,7 +54,7 @@
             </p:dataTable>
             </h:form>
         <h:form id="formCH1">
-            <p:panelGrid  columns="1"  id="nowacecha" >
+            <p:panelGrid id="nowacecha" >
                 <f:facet name="header">
                     <p:row>
                         <p:column>
