--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_dokfkrozrachunki_old.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_dokfkrozrachunki_old.xhtml
@@ -35,7 +35,7 @@
                        style="height: 650px;">
             <h:form id="rozrachunki"  >
                 <div style="height: 585px;" >
-                    <p:panelGrid  columns="1" id="paneledycji"  style="width: 1200px; " >
+                    <p:panelGrid id="paneledycji"  style="width: 1200px; " >
                         <f:facet name="header">
                             <p:row>
                                 <p:column>
@@ -81,7 +81,7 @@
                             </p:column>
                         </p:row>
                     </p:panelGrid>
-                    <p:panelGrid   columns="1" id="paneledycji2"  style="#{dokfkView.aktualnyWierszDlaRozrachunkow.wiersz.tabelanbp.waluta.symbolwaluty ne 'PLN' ? 'width: 1000px;' :  'width: 700px;'}" >
+                    <p:panelGrid id="paneledycji2"  style="#{dokfkView.aktualnyWierszDlaRozrachunkow.wiersz.tabelanbp.waluta.symbolwaluty ne 'PLN' ? 'width: 1000px;' :  'width: 700px;'}" >
                         <f:facet name="header">
                             <p:row>
                                 <p:column>
