--- a/npkpir_23/web/manager/sub/deklaracjevat.xhtml
+++ b/npkpir_23/web/manager/sub/deklaracjevat.xhtml
@@ -50,7 +50,7 @@
                                          update="akordeon:definowaniepozycji akordeon:form_deklaracjaVatSchemaView:wykazschem akordeon:definowaniewierszysumarycznych akordeon:definowaniewierszykoncowych"/>
                     </p:column>
                     <p:rowExpansion>
-                        <p:panelGrid  columns="1" >
+                        <p:panelGrid>
                             <f:facet name="header">
                                 <p:row>
                                     <p:column>
