--- a/npkpir_23/web/sub/dialog_nowasprawa.xhtml
+++ b/npkpir_23/web/sub/dialog_nowasprawa.xhtml
@@ -11,7 +11,7 @@
               closeOnEscape="true" onHide="resetujdialog('dialog_nowasprawa');"  >
         <h:form id="form_dialog_nowasprawa">
             <p:growl ><p:autoUpdate/></p:growl>
-            <p:panelGrid  columns="1"  style="padding: 10px;">
+            <p:panelGrid style="padding: 10px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
