--- a/npkpir_23/web/wspolny/sub/bilanse/symulacjawyniku.xhtml
+++ b/npkpir_23/web/wspolny/sub/bilanse/symulacjawyniku.xhtml
@@ -151,7 +151,7 @@
                     <h:outputText value="#{loop.getTopKontoOpis()}" />
                 </p:column>
                 <f:facet name="footer">
-                    <p:panelGrid  columns="1"  style="padding-right: 30px;">
+                    <p:panelGrid style="padding-right: 30px;">
                     <p:column colspan="8">
                         <h:outputText value="razem przychody, razem vat"/>
                     </p:column>
@@ -266,7 +266,7 @@
                 </p:column>
 
                <f:facet name="footer">
-                    <p:panelGrid  columns="1"  style="padding-right: 30px;">
+                    <p:panelGrid style="padding-right: 30px;">
                     <p:column colspan="8">
                         <h:outputText value="razem koszty, razem vat"/>
                     </p:column>
