--- a/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_dodawanie.xhtml
+++ b/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_dodawanie.xhtml
@@ -101,7 +101,7 @@
                         </h:selectOneMenu>
                     </p:column>
                 </p:panelGrid>
-                <p:panelGrid   columns="1" style="padding: 5px; margin-left: 5px;" rendered="#{WpisView.ksiegirachunkowe eq true}">
+                <p:panelGrid style="padding: 5px; margin-left: 5px;" rendered="#{WpisView.ksiegirachunkowe eq true}">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
