--- a/npkpir_23/web/wspolny/sub/faktura/faktura_elementygraficzne.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_elementygraficzne.xhtml
@@ -24,7 +24,7 @@
                 <p:growl life="3600"  id="messages1" showDetail="true"/>
             </h:form>
             <h:form id="formelementygraficzne2">
-                <p:panelGrid  columns="2" >
+                <p:panelGrid>
                     <f:facet name="header">
                         <p:row>
                             <p:column>
