--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_taxman.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_taxman.xhtml
@@ -26,7 +26,7 @@
         </style>
         <h:form id="formsporzadzone">
            
-            <p:panelGrid  columns="1"  id="panelsum" style="height: 40px;" rendered="#{WpisView.biuroiszef eq true}">
+            <p:panelGrid id="panelsum" style="height: 40px;" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
