--- a/npkpir_23/web/wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml
@@ -73,7 +73,7 @@
                         <bcf:outputpl0 value="#{loop.EVatwpisSuma.vat}"/>
                     </p:column>
                 </p:dataTable>
-                <p:panelGrid   columns="1" style="text-align: center;width: 790px;">
+                <p:panelGrid style="text-align: center;width: 790px;">
                     <f:facet name="header">
                         <p:row>
                             <p:column>
