--- a/npkpir_23/web/guest/sub/zobowiazania.xhtml
+++ b/npkpir_23/web/guest/sub/zobowiazania.xhtml
@@ -12,7 +12,7 @@
         <p:outputPanel deferred="true">
         <p:growl life="3600"  id="wiad" showDetail="true"/>
         <p:focus for="dokumentyLista"/>
-        <p:panelGrid  columns="1" id="dokumentyLista" rendered="#{PlatnosciView.selectedZob.zus52 eq null ? false : true}">
+        <p:panelGrid id="dokumentyLista" rendered="#{PlatnosciView.selectedZob.zus52 eq null ? false : true}">
             <f:facet name="header">
                 <p:row>
                     <p:column colspan="3">
@@ -120,7 +120,7 @@
     <h:form id="formZob1">
         <p:outputPanel deferred="true">
         <p:growl life="3600"  id="wiad1" showDetail="true"/>
-        <p:panelGrid columns="1" id="dokumentyLista1" rendered="#{PlatnosciView.selectedZob.pit5 eq 0 ? false : true}"> 
+        <p:panelGrid id="dokumentyLista1" rendered="#{PlatnosciView.selectedZob.pit5 eq 0 ? false : true}"> 
             <f:facet name="header">
                 <p:row>
                     <p:column colspan="3">
@@ -185,7 +185,7 @@
     <h:form id="formZob3">
         <p:outputPanel deferred="true">
         <p:growl life="3600"  id="wiad3" showDetail="true"/>
-        <p:panelGrid  columns="1" id="dokumentyLista3" rendered="#{PlatnosciView.selectedZob.pit4 eq null ? false : true}">> 
+        <p:panelGrid id="dokumentyLista3" rendered="#{PlatnosciView.selectedZob.pit4 eq null ? false : true}">> 
             <f:facet name="header">
                 <p:row>
                     <p:column colspan="3">
@@ -259,7 +259,7 @@
     <h:form id="formZob2">
         <p:outputPanel deferred="true">
         <p:growl life="3600"  id="wiad2" showDetail="true"/>
-        <p:panelGrid columns="1" id="dokumentyLista2" >
+        <p:panelGrid id="dokumentyLista2" >
             <f:facet name="header">
                   <p:row>
                     <p:column colspan="3">
