--- a/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
@@ -42,7 +42,7 @@
             <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
             <p:focus for="polawprowadzania1"/>
             <p:panelGrid  columns="2" >
-                <p:panelGrid  columns="1" id="polawprowadzania1" style="width: 300px;">
+                <p:panelGrid id="polawprowadzania1" style="width: 300px;">
                     <f:facet name="header">
                         <p:row >
                             <p:column>
@@ -88,7 +88,7 @@
                         </p:column>
                     </p:row>
                 </p:panelGrid>
-                <p:panelGrid  columns="3" id="panelTabelaNBP" style="width: 270px;" rendered="#{DokumentView.selDokument.listakwot1.get(0).listaKolumna1Rozbicie.size() eq 0}">
+                <p:panelGrid id="panelTabelaNBP" style="width: 270px;" rendered="#{DokumentView.selDokument.listakwot1.get(0).listaKolumna1Rozbicie.size() eq 0}">
                     <f:facet name="header">
                         <p:row>
                             <p:column width="110">
@@ -117,7 +117,7 @@
                     </p:row>
                 </p:panelGrid>
             </p:panelGrid>
-            <p:panelGrid   columns="3" id="polawprowadzania" style="width: 450px;">
+            <p:panelGrid id="polawprowadzania" style="width: 450px;">
                 <f:facet name="header">
                     <p:row >
                         <p:column>
@@ -231,7 +231,7 @@
                         </h:selectOneMenu><br/>
                     </p:column>
                 </p:dataTable>
-                <p:panelGrid   columns="1" id="tabelapkpir2" >
+                <p:panelGrid id="tabelapkpir2" >
                     <f:facet name="header">
                         <p:row >
                             <p:column>
@@ -391,7 +391,7 @@
                 </p:autoComplete>
             </p:outputPanel>
             <p:outputPanel id="nowypanelsrodki" style="width: 900px;">
-                <p:panelGrid  columns="1"  id="tabelasrodkitrwaleOT" rendered="#{DokumentView.renderujwysz}" style="margin-top: 5px;"> 
+                <p:panelGrid id="tabelasrodkitrwaleOT" rendered="#{DokumentView.renderujwysz}" style="margin-top: 5px;"> 
                     <f:facet name="header">
                         <p:row>
                             <p:column>
@@ -482,7 +482,7 @@
                 </p:dataTable>
             </p:panel>
             <!--pola ewidencji VAT-->
-            <p:panelGrid   columns="1" id="ostatnipanel" style="width: 400px;">
+            <p:panelGrid id="ostatnipanel" style="width: 400px;">
                 <f:facet name="header">
                     <p:row >
                         <p:column>
