--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -518,7 +518,7 @@
             </h:form>
             <h:form id="form2">
                 <p:focus for="panelstraty">
-                    <p:panelGrid   columns="3" id="panelstraty" style="margin-top: 10px;margin-bottom: 10px;">
+                    <p:panelGrid id="panelstraty" style="margin-top: 10px;margin-bottom: 10px;">
                         <f:facet name="header">
                             <p:row>
                                 <p:column>
