--- a/npkpir_23/web/wspolny/sub/bilanse/straty.xhtml
+++ b/npkpir_23/web/wspolny/sub/bilanse/straty.xhtml
@@ -69,7 +69,7 @@
             </h:form>
             <h:form id="form2">
                 <p:focus for="panelstraty">
-                    <p:panelGrid   columns="4"  id="panelstraty" style="margin-top: 10px;margin-bottom: 10px;">
+                    <p:panelGrid id="panelstraty" style="margin-top: 10px;margin-bottom: 10px;">
                         <f:facet name="header">
                             <p:row>
                                 <p:column>
