--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_edycja.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_edycja.xhtml
@@ -25,7 +25,7 @@
             }
         </style>
         <h:form id="formsporzadzone_edit">
-            <p:panelGrid  columns="4"  id="panelsum_edit" style="height: 40px;">
+            <p:panelGrid id="panelsum_edit" style="height: 40px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
