--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
@@ -20,13 +20,13 @@
         </p:panelGrid>
         <p:outputPanel style="margin-top: 15px;">
                     <p:dataTable id="rzadfn" value="#{fakturaView.selected.pozycjenafakturze}" var="row" rowIndexVar="rowStat"
-                                 style="width: 750px;"
+                                 style="width: 850px;"
                                  >
                         <f:facet name="header" >
                             <h:outputText value="przed korektą"  rendered="#{fakturaView.fakturakorekta}"/>
                         </f:facet>
-                        <p:column headerText="nazwa" width="280" style="text-align: center;">
-                            <p:inputText id="nazwa" value="#{row.nazwa}" style="width: 260px;"
+                        <p:column headerText="nazwa" width="380" style="text-align: center;">
+                            <p:inputText id="nazwa" value="#{row.nazwa}" style="width: 340px;"
                                          styleClass="komorka"  label="text" title="nazwa towaru lub usługi" ><p:watermark for="nazwa" value="nazwa towaru lub usługi" />
                                 <p:ajax global="false" event="focus" onstart="sprawdzczynazwaskroconafakturaniejestshown();"/>
                             </p:inputText>   
@@ -38,8 +38,8 @@
                                                      $(this).addClass('ui-state-focus');"
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
-                                <f:selectItem itemLabel="Stück" itemValue="Stück"/>
                                 <f:selectItem itemLabel="Pauschal" itemValue="Pausch."/>
+                                <f:selectItem itemLabel="Stück" itemValue="Stück"/>
                                 <f:selectItem itemLabel="Std" itemValue="Std"/>
                                 <f:selectItem itemLabel="Kg" itemValue="Kg"/>
                                 <f:selectItem itemLabel="Km" itemValue="Km"/>
@@ -54,7 +54,7 @@
                         <p:column headerText="ilość" width="60" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
                             <p:inputText id="ilosc" value="#{row.ilosc}" label="text" title="ilość" style="text-align:  right; width: 50px;"><p:watermark for="ilosc" value="ilość" /></p:inputText>
                         </p:column>
-                        <p:column headerText="#{fakturaView.selected.liczodwartoscibrutto ? 'cena jedn.brutto' : 'cena jedn.netto'}" width="90" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
+                        <p:column headerText="#{fakturaView.selected.liczodwartoscibrutto ? 'cena jedn.brutto' : 'cena jedn.netto'}" width="120" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
                             <p:inputNumber id="cena" value="#{row.cena}" required="true" styleClass="kwotarozrachunku" size="13"
                                             requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s" decimalSeparator="."   
                                             thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000"/> 
@@ -66,12 +66,12 @@
                                                      $(this).addClass('ui-state-focus');"
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
+                                <f:selectItem itemLabel="§13b" itemValue="-3"/>
                                 <f:selectItem itemLabel="19%" itemValue="19"/>
-                                <f:selectItem itemLabel="§13b" itemValue="20"/>
                                 <f:selectItem itemLabel="np" itemValue="-1"/>
                             </h:selectOneMenu>
                         </p:column>
-                        <p:column style="text-align: center;">
+                        <p:column style="text-align: center;" width="30">
                             <p:commandButton icon="ui-icon-trash" actionListener="#{fakturaView.usunwierszSrodek(row)}"  update="@namingcontainer" global="false"/>
                         </p:column>
                     </p:dataTable>
@@ -105,14 +105,15 @@
                                                      $(this).addClass('ui-state-focus');"
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
-                                <f:selectItem itemLabel="szt." itemValue="szt."/>
-                                <f:selectItem itemLabel="godz." itemValue="godz."/>
-                                <f:selectItem itemLabel="kg" itemValue="kg"/>
-                                <f:selectItem itemLabel="km" itemValue="km"/>
-                                <f:selectItem itemLabel="kpl" itemValue="kpl"/>
-                                <f:selectItem itemLabel="m-c" itemValue="m-c"/>
-                                <f:selectItem itemLabel="osb." itemValue="osb."/>
-                                <f:selectItem itemLabel="tona" itemValue="tona"/>
+                                <f:selectItem itemLabel="Pauschal" itemValue="Pausch."/>
+                                <f:selectItem itemLabel="Stück" itemValue="Stück"/>
+                                <f:selectItem itemLabel="Std" itemValue="Std"/>
+                                <f:selectItem itemLabel="Kg" itemValue="Kg"/>
+                                <f:selectItem itemLabel="Km" itemValue="Km"/>
+                                <f:selectItem itemLabel="Kpl" itemValue="Kpl"/>
+                                <f:selectItem itemLabel="Monat" itemValue="Monat"/>
+                                <f:selectItem itemLabel="Pers." itemValue="Pers."/>
+                                <f:selectItem itemLabel="M2" itemValue="M2"/>
                                 <f:selectItem itemLabel="Mg" itemValue="Mg"/>
                                 <f:selectItem itemLabel="m3" itemValue="m3"/><f:selectItem itemLabel="m2" itemValue="m2"/>
                             </h:selectOneMenu>
@@ -132,8 +133,8 @@
                                                      $(this).addClass('ui-state-focus');"
                                              onblur="$(this).removeClass('ui-state-focus');
                                                      $(this).addClass('ui-state-default');" >
+                                <f:selectItem itemLabel="§13b" itemValue="-3"/>
                                 <f:selectItem itemLabel="19%" itemValue="19"/>
-                                <f:selectItem itemLabel="§13b" itemValue="20"/>
                                 <f:selectItem itemLabel="np" itemValue="-1"/>
                             </h:selectOneMenu>
                         </p:column>
