--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_rachunek.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_rachunek.xhtml
@@ -60,7 +60,7 @@
                     <p:inputNumber id="cena" value="#{row.cena}" required="true" styleClass="kwotarozrachunku"  size="13"
                                     requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000"/> 
                 </p:column>
-                <p:column style="text-align: center;">
+                <p:column style="text-align: center;" width="30">
                     <p:commandButton icon="ui-icon-trash" actionListener="#{fakturaView.usunwierszSrodek(row)}" update="@namingcontainer" global="false"/>
                 </p:column>
             </p:dataTable>
