--- a/npkpir_23/web/ksiegowa/sub/podatnikust/inwentaryzacja_old.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/inwentaryzacja_old.xhtml
@@ -30,7 +30,7 @@
                     </p:column>
                 </p:dataTable>
             </p:panelGrid>
-            <p:panel header="wybierz parametry aktualne" style="width: 990px;"/>
+<!--            <p:panel header="wybierz parametry aktualne" style="width: 990px;"/>
             <p:panelGrid id="parametrypodatnika3" columns="4" >
                 <h:outputText value="rok podatkowy: "/>
                 <p:selectOneMenu value="#{podatnikView.parametr.rokOd}">
@@ -38,11 +38,11 @@
                 </p:selectOneMenu>
                 <p:inputText value="#{podatnikView.parametr.parametr}" />
             </p:panelGrid>
-            <br/>
-            <p:panelGrid columns="2" style="column-width: 350px; width: 500px">
+            <br/>-->
+<!--            <p:panelGrid columns="2" style="column-width: 350px; width: 500px">
                 <p:commandButton action="#{podatnikView.usunremanent()}" value="usun parametr" update="@form" type="submit"/>
                 <p:commandButton action="#{podatnikView.dodajremanent()}" value="dodaj parametr" update="@form" type="submit"/>
-            </p:panelGrid>
+            </p:panelGrid>-->
         </h:form>
         <br/><br/>
     </p:tab>  
