--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_waluty.xhtml
@@ -85,6 +85,7 @@
                             <h:outputText value="przelicznik"/>
                         </p:column>
                     </p:row>
+                </f:facet>
                     <p:row>
                     <p:column >
                         <p:inputText value="#{walutyViewFK.nowawaluta.symbolwaluty}" required="true" requiredMessage="Wpisz skrót waluty" maxlength="3"   style="text-align: center;"/>
